--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -8,7 +8,7 @@
 #sonar.sourceEncoding=UTF-8
 
 # must be unique in a given SonarQube instance
-sonar.projectKey=project1
+sonar.projectKey=sonarqube
 
 # --- optional properties ---
 
@@ -26,5 +26,4 @@ sonar.projectKey=project1
 # security
 sonar.login=admin
 sonar.password=sonar
-
 
